--- a/src/components/products/Products.scss
+++ b/src/components/products/Products.scss
@@ -7,7 +7,7 @@
 
   h2{
     justify-content: center;
-    width: 80%;
+    width: 100%;
     font-size: 3rem;
     font-weight: 300;
     display: flex;
@@ -19,6 +19,7 @@
     color: grey;
     font-size: 1.5rem;
     margin-top:0em;
+    height: 10vh;
   }
 }
 
