--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,10 @@
 .MuiContainer-root{
   padding:0px !important;
 }
+
+.topLevel{
+  display: flex;
+  justify-content:space-between;
+  padding-left: 20px;
+  padding-right: 20px;
+}
