--- a/src/components/products/Products.scss
+++ b/src/components/products/Products.scss
@@ -35,3 +35,10 @@
 .MuiCard-root{
   margin:20px;
 }
+
+.viewDetails{
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  color: #3f51b5;
+  font-size: 0.8125rem;
+  text-decoration: none;
+}
