--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -9,9 +9,12 @@ header{
     padding: 5px;
     margin-right: 20px;
     display: flex;
-    p{
+    a{
+      margin-left: 20px;
+      color: #2e71c7;
       display: flex;
       align-items: flex-end;
+      text-decoration: none;
     }
   }
 }
